--- a/tvieira/scss/all.scss
+++ b/tvieira/scss/all.scss
@@ -8,6 +8,7 @@
 @import 'components/tabs.scss';
 @import 'components/mixin.scss';
 @import 'components/variables.scss';
+@import 'components/pagination.scss';
 @import 'dashboard.scss';
 @import 'product.scss';
 @import 'main.scss'; 
