--- a/Alexandre/scss/main.scss
+++ b/Alexandre/scss/main.scss
@@ -25,7 +25,7 @@ main{
   clear:both;
 }
 
-section{
+.section{
   margin:32px 16px;
 }
 
@@ -33,8 +33,76 @@ section{
   background-color: $primary;
 }
 
-.has-text-primary {
+/*
+  Helpers
+*/
+
+.margin--none{
+  margin:0!important;
+}
+.margin-b--5{
+  margin-bottom:5px!important;
+}
+.margin-t--40{
+  margin-top:40px!important;
+}
+
+.has-text-green{
+  color:#4e9400;
+}
+
+.lead{
+  font-size:18px;
+  margin-bottom:10px;
+}
+
+.width--75{
+  width:75%;
+}
+
+.background--red{
+  background:$danger;
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6,p{
+    color:#fff;
+  }
+  p{
+    opacity:.6;
+  }
+}
+
+.text{
+  color:$text;
+}
+
+.text--primary {
   color: $primary;
+}
+
+.text--grey {
+  color: $grey;
+}
+
+.text--dark {
+  color: $dark;
+}
+.text--black {
+  color: $black;
+}
+
+.text--success{
+  color:$success;
+}
+.text--uppercase{
+  text-transform: uppercase;
+}
+
+.text--strong {
+  font-weight: 800;
 }
 
 figure {
@@ -42,37 +110,102 @@ figure {
 }
 
 .image img{
+  display:block;
   max-width:100%;
 }
 
 .title {
   margin: 0 0 16px;
-  font-weight: 300;
+  font-weight: 400;
+  &.is-1 {
+    font-size: 64px;
+    font-weight:800;
+    + .subtitle {
+      font-size: 48px;
+    }
+  }
+  
+  &.is-2 {
+    font-size: 48px;
+    + .subtitle {
+      font-size: 32px;
+    }
+  }
+  
+  &.is-3 {
+    font-size: 32px;
+    + .subtitle {
+      font-size: 28px;
+    }
+  }
+  
+  &.is-4 {
+    font-size: 28px;
+    + .subtitle {
+      font-size: 24px;
+    }
+  }
+
+  &.is-5 {
+    font-size: 24px;
+    + .subtitle {
+      font-size: 20px;
+    }
+  }
+  
+  &.is-6 {
+    font-size: 20px;
+    + .subtitle {
+      font-size: 16px;
+    }
+  }
+  
+  &.is-7 {
+    font-size: 16px;
+    + .subtitle {
+      font-size: 14px;
+    }
+  }
+  
+  ~.subtitle {
+    margin-top: -16px;
+    color:#4a4d57;
+  }
+  
 }
 
 .subtitle {
+  margin-top:-8px;
   font-weight: 300;
+  &.is-1 {
+    font-size: 64px;
+    font-weight:800;
+  }
+  
+  &.is-2 {
+    font-size: 32px;
+  }
+  
+  &.is-3 {
+    font-size: 24px;
+  }
+  
+  &.is-4 {
+    font-size: 20px;
+  }
+  
+  &.is-5 {
+    font-size: 18px;
+  }
 }
 
-.title.is-1 {
-  font-size: 64px;
-  font-weight:800;
+.subtitle{
+  margin-top:-8px;
 }
 
-.title.is-2 {
-  font-size: 32px;
-}
-
-.title.is-3 {
-  font-size: 24px;
-}
-
-.title.is-5 {
-  font-size: 20px;
-}
-
-.title~.subtitle {
-  margin-top: -16px;
+.hero__title{
+  @extend.title;
+  @extend.title.is-1;
 }
 
 .link{
@@ -82,6 +215,10 @@ figure {
 
 .link:hover{
   color:#524ac2;
+}
+
+.is-pulled-right{
+  float:right;
 }
 
 .header {
@@ -111,16 +248,14 @@ figure {
   vertical-align: top;
 }
 
-.header .page-title {
+.logo__page-title {
   font-weight: 600;
   color: #fff;
   vertical-align: 50%;
 }
 
-.header .navbar {
-}
 
-.navbar-wrapper{
+.header{
   display: flex;
   justify-content: space-between;
 }
@@ -131,9 +266,12 @@ figure {
   clear: both;
   background: #04050A;
 }
-.hero .title,
-.hero .subtitle{
-  color: #fff;
+.hero__title{
+  color:#fff;
+}
+.hero__subtitle{
+  @extend .subtitle;
+  color: #e1e1e1;
 }
 
 .hero p {
@@ -150,21 +288,70 @@ figure {
   width:100%;
 }
 
-.menu-list {
+.menu__dropdown{
+  display:none;
+  position: absolute;
+  top:35px;
+  left:0;
+  padding:8px;
+  background:#fff;
+  border-radius:$radius;
+  width:120px;
+}
+
+.dropdown__item{
+  display:block;
+  a{
+    display:block;
+    color:$text;
+    padding:16px 12px;
+    text-decoration: none;
+  }
+}
+
+.menu__item:hover {
+  .menu__dropdown{
+    display:block;
+  }
+}
+
+.menu__list {
   list-style: none;
   padding: 0;
   margin: 0;
 }
 
-.navbar .menu-list .menu-item {
+.menu__item {
   display: inline-block;
+  position:relative;
   padding: 8px;
+  > a:not(.button), span {
+    text-decoration: none;
+    color: #bbb;
+    line-height: 18px;
+  }
 }
 
-.navbar .menu-list .menu-item a:not(.button) {
-  text-decoration: none;
-  color: #bbb;
-  line-height: 18px;
+.menu__item--expandable{
+  @extend .menu__item;
+  &:after{
+    content: "\f078";
+    font-family: "Font Awesome 5 Free"; 
+    font-weight: 900;
+    margin-left: 4px;
+    font-size: 12px;
+    line-height: 20px;
+    color:#e1e1e1;
+  }
+  &:hover:after{
+    content: "\f077";
+  }
+}
+
+.menu__item--active{
+  @extend .menu__item;
+
+  color:#fff;
 }
 
 .footer-nav .menu-list {
@@ -179,14 +366,6 @@ figure {
 .container.is-small{
   max-width: 600px;
   margin: 0 auto;
-}
-
-.card {
-  background: #fff;
-}
-
-.card>.card-content {
-  padding: 32px;
 }
 
 .product-card .card-content{
@@ -291,10 +470,3 @@ figure {
 } */
 
 
-/*
-  Helpers
-*/
-
-.has-text-green{
-  color:#4e9400;
-}
